Korjattiin pari käännöstä

--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
@@ -56,7 +56,7 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="cloud_back_up_ok_btn">OK</string>
   <string name="cloud_back_up_opening">Odota hetki…</string>
   <string name="cloud_back_up_share_activity_confirm">Päivitä</string>
-  <string name="cloud_back_up_share_activity_discription">Hanki lisää tallennustilaa, päivittäiset varmuuskopiot ja lisää.</string>
+  <string name="cloud_back_up_share_activity_discription">Hanki lisää tallennustilaa, päivittäiset varmuuskopioinnit ja paljon muuta.</string> 
   <string name="cloud_back_up_share_activity_title">Päivitä Mi Tili</string>
   <string name="cloud_back_up_task">Varmuuskopioidaan…</string>
   <string name="cloud_backup">Mi Pilven varmuuskopiot</string>
